# django-personal-website

./: .ENV  .env  .env.example  .gitignore  Pipfile  README.md  db.sqlite3  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt
DEPRECATED/health/: models.py  urls.py
DEPRECATED/wiltw/: models.py
api/: serializers.py  urls.py  views.py
books/: admin.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_auto_20190717_0251.py  0002_auto_20190723_0210.py  0003_auto_20190717_0256.py  0003_book_date_read.py  0004_auto_20190724_0319.py  0005_book_draft.py  0006_book_intro_thoughts.py  0006_book_toread.py  0007_auto_20191122_1516.py  0008_book_main_category.py  0009_auto_20191213_1302.py  0010_auto_20191226_1017.py  0011_auto_20191226_1018.py  0012_auto_20191226_1019.py  (+3 more)
gallery/: admin.py  models.py  urls.py  views.py
health/: admin.py  views.py
ideas/: admin.py  models.py  urls.py  views.py
journal/: admin.py  models.py  urls.py  views.py
newsletter/: admin.py  forms.py  models.py  urls.py  views.py
now/: admin.py  models.py  urls.py  views.py
pages/: forms.py  tests.py  urls.py  views.py
projects/: admin.py  models.py  urls.py  views.py
pw/: celery.py  settings(todelete).py  settings.py  settings_dev.py  sitemaps.py  storage_backends.py  urls.py  wsgi.py
templates/: about.html  base.html  favourites.html  home.html  now.html  photo_gallery.html
templates0/: base.html
wiltw/: admin.py  apps.py  models.py  urls.py  views.py
writings/: admin.py  forms.py  models.py  urls.py  views.py
(+114 files in other folders)
