[tool.poetry]
name = "po"
version = "0.1.0"
description = ""
authors = ["Rasul Kireev <me@rasulkireev.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"
django-environ = "^0.4.5"
Pillow = "^8.1.1"
Markdown = "^3.2.1"
martor = "^1.4.9"
gunicorn = "^20.0.4"
boto3 = "^1.12.29"
django-analytical = "^2.5.0"
django-autoslug = "^1.9.6"
django-cors-headers = "^3.2.1"
django-social-share = "^1.4.0"
django-storages = "^1.9.1"
django-taggit = "^1.2.0"
sentry-sdk = "^0.14.3"
requests = "^2.23.0"
djangorestframework = "^3.11.0"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
